tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility4.ts
class A {
    private constructor() { }

    method() {
        class B {
            method() {
                new A(); // OK
            }
        }

        class C extends A { // OK
        }
    }
}

var a = new A(); // error

class D {
    protected constructor() { }

    method() {
        class E {
            method() {
                new D(); // OK
            }
        }

        class F extends D { // OK
        }
    }
}

var d = new D(); // error